opam-version: "2.0"
synopsis: "Monitor live Eio programs"
description:
  "Meio provides an executable that allows you to monitor OCaml programs using Eventring."
maintainer: ["patrick@sirref.org"]
authors: ["Patrick Ferris"]
license: "MIT"
homepage: "https://github.com/ocaml-multicore/meio"
bug-reports: "https://github.com/ocaml-multicore/meio/issues"
depends: [
  "dune" {>= "3.10"}
  "eio_main"
  "eio"  {>= "0.14"}
  "astring"
  "ptime"
  "nottui"
  "logs"
  "cmdliner"
  "hdr_histogram"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
dev-repo: "git+https://github.com/ocaml-multicore/meio.git"