(executable
 (name main)
 (libraries dream lwt.unix ezjsonm ec.ev))

(rule
 (targets index.ml)
 (deps index.eml.ml)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))

(subdir static
  (rule
   (deps ../../js/index.bc.js ../../js/style.css)
   (targets index.bc.js style.css)
   (action 
     (progn 
       (copy ../../js/index.bc.js index.bc.js)
       (copy ../../js/style.css style.css)))))

(rule
 (target static.ml)
 (deps static/index.bc.js (source_tree static))
 (action (with-stdout-to %{null}
  (run ocaml-crunch -m plain static -o %{target}))))