(executable
 (name main)
 (libraries dream lwt.unix ezjsonm ec.ev runtime_events))

(rule
 (targets index.ml)
 (deps index.eml.ml)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))

(subdir static
  (rule
   (deps ../../js/bin/index.bc.js ../../js/bin/style.css)
   (targets index.bc.js style.css)
   (action 
     (progn 
       (copy ../../js/bin/index.bc.js index.bc.js)
       (copy ../../js/bin/style.css style.css)))))

(rule
 (target static.ml)
 (deps static/index.bc.js (source_tree static))
 (action (with-stdout-to %{null}
  (run ocaml-crunch -m plain static -o %{target}))))